--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:contentScrim="@color/greenish"
             app:expandedTitleMarginBottom="32dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
@@ -29,7 +30,6 @@
                 android:layout_height="292dp"
                 android:background="@color/colorPrimary"
                 android:fitsSystemWindows="true"
-                android:focusableInTouchMode="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/cover"
                 app:layout_collapseMode="parallax" />
@@ -39,14 +39,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/my_toolbar">
+                app:popupTheme="@style/my_toolbar"
+                style="@style/my_toolbar">
 
                 <TextView
                     android:id="@+id/toolbar_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
+                    android:text="إسم الخدمة المقدمة"
                     android:singleLine="true" />
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -56,6 +58,7 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:clipToPadding="false"
         app:behavior_overlapTop="150dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
